--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,7 @@ bin/
 obj/
 #Ignore Zipped
 Zipped/
-<<<<<<< HEAD
-=======
-
 #Ignore Zipped
 Zipped/
+#adding References
+!DirectoryUpdatesSLN/References/Ionic.Zip.dll
