--- a/DirectoryUpdatesSLN/App.config
+++ b/DirectoryUpdatesSLN/App.config
@@ -1,10 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
-
-  <appSettings>
-    <add key="Setting3" value ="HOHOHOHO"/>
-  </appSettings>
+    <appSettings>
+        <add key="TestIngKey" value="Test KEYSS" />
+        <add key="NewSetting" value="May 7, 2014" />
+        <add key="Setting1" value="May 8, 2014" />
+    </appSettings>
 </configuration>
