--- a/com.qas.sambo.sftporderdirectory/com.qas.sambo.sftporderdirectory.csproj
+++ b/com.qas.sambo.sftporderdirectory/com.qas.sambo.sftporderdirectory.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DDC65685-1CFD-4378-B8C1-5B866ECFE5A1}</ProjectGuid>
+    <ProjectGuid>{E97E33EC-2BE4-4F30-A348-9B53F3BCE72D}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>com.qas.sambo.directoryupdate</RootNamespace>
-    <AssemblyName>DirectoryUpdatesSLN</AssemblyName>
+    <RootNamespace>com.qas.sambo.sftporderdirectory</RootNamespace>
+    <AssemblyName>com.qas.sambo.sftporderdirectory</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -21,7 +21,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\DirectoryUpdatesSLN.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -32,41 +31,21 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject>com.qas.sambo.directoryupdate.SampleTest.LoopControlCommand</StartupObject>
-  </PropertyGroup>
   <ItemGroup>
-    <None Include="App.config">
-      <SubType>Designer</SubType>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Data\DataElement.cs" />
-    <Compile Include="Data\DirectoryUpdateFile.cs" />
-    <Compile Include="Data\StaticDirectoryListings.cs" />
-    <Compile Include="SampleTest\AppSettingExample.cs" />
-    <Compile Include="SampleTest\ASPCreation.cs" />
-    <Compile Include="SampleTest\FileCreation.cs" />
-    <Compile Include="SampleTest\LoopControlCommand.cs" />
-    <Compile Include="SampleTest\SFTPExampleClass.cs" />
-    <Compile Include="SampleTest\StopJoin.cs" />
-    <Compile Include="SampleTest\ThreadsExample.cs" />
-    <Compile Include="SampleTest\ZipTestFile.cs" />
-    <Compile Include="Utils\ZipEncryption.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="Ionic.Zip">
-      <HintPath>References\Ionic.Zip.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.VisualBasic" />
-    <Reference Include="Renci.SshNet">
-      <HintPath>References\Renci.SshNet.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ThingsToDo.txt" />
+    <Compile Include="Program.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
