--- a/DirectoryUpdatesSLN/com.qas.sambo.directoryupdate.csproj
+++ b/DirectoryUpdatesSLN/com.qas.sambo.directoryupdate.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>com.qas.sambo.directoryupdate.SampleTest.LoopControlCommand</StartupObject>
+    <StartupObject>com.qas.sambo.directoryupdate.SampleTest.SFTPExampleClass</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <None Include="App.config">
