--- a/DirectoryUpdatesSLN/App.config
+++ b/DirectoryUpdatesSLN/App.config
@@ -4,8 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
     <appSettings>
-        <add key="TestIngKey" value="Test KEYSS" />
-        <add key="NewSetting" value="May 7, 2014" />
-        <add key="Setting1" value="May 8, 2014" />
+        <add key="JsonFileLocation" value="DatasetFile.json"/>
     </appSettings>
 </configuration>
