--- a/DirectoryUpdatesSLN/App.config
+++ b/DirectoryUpdatesSLN/App.config
@@ -4,6 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
     <appSettings>
+      <!-- The Below is hte location of where the datasetfile is located-->
         <add key="JsonFileLocation" value="DatasetFile.json"/>
     </appSettings>
 </configuration>
