--- a/DirectoryUpdatesSLN/App.config
+++ b/DirectoryUpdatesSLN/App.config
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
-    <appSettings>
-      <!-- The Below is hte location of where the datasetfile is located-->
-        <add key="JsonFileLocation" value="DatasetFile.json"/>
-    </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <appSettings>
+    <!-- The Below is hte location of where the datasetfile is located-->
+    <add key="JsonFileLocation" value="DatasetFile.json"/>
+    <add key="ZipFileLocation" value="C:\MyFiles\Programming\Testing\Zipped"/>
+  </appSettings>
 </configuration>
