--- a/DirectoryUpdatesSLN/App.config
+++ b/DirectoryUpdatesSLN/App.config
@@ -7,5 +7,6 @@
     <!-- The Below is hte location of where the datasetfile is located-->
     <add key="JsonFileLocation" value="DatasetFile.json"/>
     <add key="ZipFileLocation" value="C:\MyFiles\Programming\Testing\Zipped"/>
+    <add key="LogFileLocation" value="LogFile.log"/>
   </appSettings>
 </configuration>
