--- a/DirectoryUpdatesSLN/App.config
+++ b/DirectoryUpdatesSLN/App.config
@@ -8,5 +8,6 @@
     <add key="JsonFileLocation" value="DatasetFile.json"/>
     <add key="ZipFileLocation" value="C:\MyFiles\Programming\Testing\Zipped"/>
     <add key="LogFileLocation" value="LogFile.log"/>
+    <add key="ElementList" value="FilesList.json"/>
   </appSettings>
 </configuration>
