Creating CopyLearning Files

--- a/DirectoryUpdatesSLN/App.config
+++ b/DirectoryUpdatesSLN/App.config
@@ -7,7 +7,8 @@
     <!-- The Below is hte location of where the datasetfile is located-->
     <add key="JsonFileLocation" value="DatasetFile.json"/>
     <add key="ZipFileLocation" value="C:\MyFiles\Programming\Testing\Zipped"/>
-    <add key="LogFileLocation" value="LogFile.log"/>
-    <add key="ElementList" value="FilesList.json"/>
+    <add key="LogFileLocation" value="C:\MyFiles\Programming\Testing\LogFile.log"/>
+    <add key="ElementList" value="C:\MyFiles\Programming\Testing\FilesList.json"/>
+    <add key="ErrorLogLocation" value ="C:\MyFiles\Programming\Testing\ErrorLog.log"/>
   </appSettings>
 </configuration>
