Changed to FileCopieDClass in Copy Learnign instead of int

--- a/com.qas.sambo.CSharpLearning/com.qas.sambo.CSharpLearning.csproj
+++ b/com.qas.sambo.CSharpLearning/com.qas.sambo.CSharpLearning.csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>com.qas.sambo.CSharpLearning.CopyFile</StartupObject>
+    <StartupObject>com.qas.sambo.CSharpLearning.CopyLearning</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -44,7 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CopyFile.cs" />
+    <Compile Include="CopyLearning.cs" />
     <Compile Include="DelegateLearning.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
