Before Changing CopyFile

--- a/DirectoryUpdatesSLN/App.config
+++ b/DirectoryUpdatesSLN/App.config
@@ -5,7 +5,7 @@
   </startup>
   <appSettings>
     <!-- The Below is hte location of where the datasetfile is located-->
-    <add key="JsonFileLocation" value="DatasetFile.json"/>
+    <add key="JsonFileLocation" value="C:\MyFiles\Programming\Testing\DatasetFile.json"/>
     <add key="ZipFileLocation" value="C:\MyFiles\Programming\Testing\Zipped"/>
     <add key="LogFileLocation" value="C:\MyFiles\Programming\Testing\LogFile.log"/>
     <add key="ElementList" value="C:\MyFiles\Programming\Testing\FilesList.json"/>
