--- a/com.qas.sambo.CSharpLearning/com.qas.sambo.CSharpLearning.csproj
+++ b/com.qas.sambo.CSharpLearning/com.qas.sambo.CSharpLearning.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CopyDirectory.cs" />
     <Compile Include="CopyFileAPI.cs" />
     <Compile Include="CopyFileExTest.cs" />
     <Compile Include="CopyLearning.cs" />
