Completed Copying with Progress

--- a/DirectoryUpdatesSLN/com.qas.sambo.directoryupdate.csproj
+++ b/DirectoryUpdatesSLN/com.qas.sambo.directoryupdate.csproj
@@ -56,6 +56,8 @@
     <Compile Include="SampleTest\StopJoin.cs" />
     <Compile Include="SampleTest\ThreadsExample.cs" />
     <Compile Include="SampleTest\ZipTestFile.cs" />
+    <Compile Include="Utils\CopyFileAPI.cs" />
+    <Compile Include="Utils\CopyFileExTest.cs" />
     <Compile Include="Utils\DirectoryCopy.cs" />
     <Compile Include="Utils\FileRoutines.cs" />
     <Compile Include="Utils\FileStringFormatting.cs" />
