--- a/com.qas.sambo.CSharpLearning/com.qas.sambo.CSharpLearning[Conflict].csproj
+++ b/com.qas.sambo.CSharpLearning/com.qas.sambo.CSharpLearning[Conflict].csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>com.qas.sambo.CSharpLearning.CopyFileExTest</StartupObject>
+    <StartupObject>com.qas.sambo.CSharpLearning.CopyDirectory</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -44,12 +44,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CopyDirectory.cs" />
     <Compile Include="CopyFileAPI.cs" />
     <Compile Include="CopyFileExTest.cs" />
     <Compile Include="CopyLearning.cs" />
     <Compile Include="DataExceptionLearning.cs" />
     <Compile Include="DelegateLearning.cs" />
-    <Compile Include="MyCopyFileAPI.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
