--- a/DirectoryUpdatesSLN/App.config
+++ b/DirectoryUpdatesSLN/App.config
@@ -10,5 +10,8 @@
     <add key="LogFileLocation" value="C:\MyFiles\Programming\Testing\LogFile.log"/>
     <add key="ElementList" value="C:\MyFiles\Programming\Testing\FilesList.json"/>
     <add key="ErrorLogLocation" value ="C:\MyFiles\Programming\Testing\ErrorLog.log"/>
+    <add key="FTPLocation" value ="/Eval/DU/"/>
+    
+  
   </appSettings>
 </configuration>
